Footer of the main page

--- a/index.htm
+++ b/index.htm
@@ -8,5 +8,8 @@
   <body>
     <header><h1>This is Header</h1></header>
     <section>main section</section>
+    <footer>
+      <h2>This is Footer</h2>
+    </footer>
   </body>
 </html>
